--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ addons:
 before_install:
 - if [ $TRAVIS_OS_NAME == "osx" ] ; then brew update; brew install binutils valgrind ; fi
 - sudo apt-get -qq update
-- sudo apt-get install -y  protobuf-compiler ibprotobuf-dev
+- sudo apt-get install -y  protobuf-compiler libprotobuf-dev
 
 # Hand off to generated script for each BUILD_TYPE
 script: ./ci_build.sh
