--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,11 @@ addons:
 before_install:
 - if [ $TRAVIS_OS_NAME == "osx" ] ; then brew update; brew install binutils valgrind ; fi
 - sudo apt-get -qq update
-- sudo apt-get install -y  protobuf-compiler libprotobuf-dev
+- apt-get install build-essential
+- wget https://protobuf.googlecode.com/svn/rc/protobuf-2.6.0.tar.gz
+- tar xvfz protobuf-2.6.0.tar.gz
+- cd protobuf-2.6.0
+- ./configure && make install
 
 # Hand off to generated script for each BUILD_TYPE
 script: ./ci_build.sh
