--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ before_install:
 - wget https://protobuf.googlecode.com/svn/rc/protobuf-2.6.0.tar.gz
 - tar xvfz protobuf-2.6.0.tar.gz
 - cd protobuf-2.6.0
-- ./configure && make install
+- ./configure && sudo make install
 
 # Hand off to generated script for each BUILD_TYPE
 script: ./ci_build.sh
