include LD_LIBRARY_PATH

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,5 +29,6 @@ before_install:
 - cd protobuf-2.6.0
 - ./configure && sudo make install
 - cd ..
+- export LD_LIBRARY_PATH = /usr/local/lib:$LD_LIBRARY_PATH
 # Hand off to generated script for each BUILD_TYPE
 script: ./ci_build.sh
