add .protos, fix errors in gened code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -112,6 +112,7 @@ ENDIF (PROTOBUF-C_FOUND)
 set (es_headers
     include/es_library.h
     include/esclient.h
+    src/es_proto.h
     src/es_connection_actor.h
 )
 
@@ -123,6 +124,7 @@ install(FILES ${es_headers} DESTINATION include)
 ########################################################################
 include_directories("${SOURCE_DIR}/src" "${SOURCE_DIR}/include")
 set (es_sources
+    src/es_proto.c
     src/es_connection_actor.c
 )
 source_group("Source Files" FILES ${es_sources})
@@ -212,6 +214,7 @@ set(CLASSTEST_TIMEOUT 5 CACHE STRING "Timeout of the selftest of a class")
 set(TOTAL_TIMEOUT 20 CACHE STRING "Timout of the total testsuite")
 
 set(TEST_CLASSES
+    es_proto
     es_connection_actor
 )
 
