--- a/Makefile.am
+++ b/Makefile.am
@@ -27,6 +27,7 @@ noinst_LTLIBRARIES =
 TESTS =
 
 EXTRA_DIST = \
+    src/es_proto.h \
     src/es_connection_actor.h \
     LICENSE \
     README.md \
