--- a/src/Makemodule.am
+++ b/src/Makemodule.am
@@ -17,6 +17,7 @@ include_HEADERS = \
     include/es_library.h
 
 src_libes_la_SOURCES = \
+    src/es_proto.c \
     src/es_connection_actor.c \
     src/platform.h
 
