--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,8 @@ before_install:
 - cd protobuf-2.6.0
 - ./configure && sudo make install
 - cd ..
-- sudo apt-get install libcunit1 libcunit1-dev
-- sudo apt-get install uuid-dev
+- sudo apt-get install  -y libcunit1 libcunit1-dev
+- sudo apt-get install  -y uuid-dev
 - export LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH
 # Hand off to generated script for each BUILD_TYPE
 script: ./ci_build.sh
