--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,13 @@ before_install:
 - cd ..
 - sudo apt-get install  -y libcunit1 libcunit1-dev
 - sudo apt-get install  -y uuid-dev
-- sudo apt-get install  -y libprotobuf-c-dev
+- sudo apt-get install  -y protobuf-compiler libprotobuf-dev libprotoc-dev
+- git clone https://github.com/protobuf-c/protobuf-c
+- cd protobuf-c
+- ./autogen.sh
+- make
+- sudo make install
+- cd ..
 - export LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH
 # Hand off to generated script for each BUILD_TYPE
 script: ./ci_build.sh
